@@ -1,3 +1,9 @@
+2004-08-03  Alexey Shchepin  <alexey@sevcom.net>
+
+	* src/web/ejabberd_web_admin.erl: Added user's roster page
+
+	* src/mod_irc/mod_irc_connection.erl: Bugfix
+
 2004-08-01  Alexey Shchepin  <alexey@sevcom.net>
 
 	* src/tls/tls.erl: Added recv_data/2 function
